--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,10 +6,16 @@
   "dependencies": {
     "@solana/buffer-layout": "^3.0.0",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.30.0"
+    "@solana/web3.js": "^1.30.0",
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
+  },
+  "scripts": {
+    "initpda": "ts-node src/features/initializePda.ts",
+    "storeaddress": "ts-node src/features/storeMainAddresses.ts"
   }
 }
