feat(scripts): added script for both create,wrap and wrap sol

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "initpda": "ts-node src/features/initializePda.ts",
     "storeaddress": "ts-node src/features/storeMainAddresses.ts",
-    "fundaddress": "ts-node src/features/fundMainAddresses.ts"
+    "fundaddress": "ts-node src/features/fundMainAddresses.ts",
+    "wrapsol": "ts-node src/features/wrapSol.ts"
   }
 }
