feat(scripts): add additional scripts for prep working token swap pool creation

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@solana/buffer-layout": "^3.0.0",
     "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-swap": "^0.1.2",
     "@solana/web3.js": "^1.30.0",
     "bn.js": "^5.2.0",
     "fs-extra": "^10.0.0"
@@ -16,10 +17,12 @@
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "initpda": "ts-node src/features/initializePda.ts",
-    "storeaddress": "ts-node src/features/storeMainAddresses.ts",
-    "fundaddress": "ts-node src/features/fundMainAddresses.ts",
-    "wrapsol": "ts-node src/features/wrapSol.ts",
-    "unwrapsol": "ts-node src/features/unwrapSol.ts"
+    "initpda": "ts-node src/features/whitelist/initializePda.ts",
+    "storeaddress": "ts-node src/features/main/storeMainAddresses.ts",
+    "fundaddress": "ts-node src/features/main/fundMainAddresses.ts",
+    "wrapsol": "ts-node src/features/whitelist/wrapSol.ts",
+    "unwrapsol": "ts-node src/features/whitelist/unwrapSol.ts",
+    "createmint": "ts-node src/features/token/createMint.ts",
+    "createtoken": "ts-node src/features/token/createTokenAndStopMint.ts"
   }
 }
