feat(scripts): add a bunch of scripts and reorganizations for creating a token swap pool

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -17,12 +17,13 @@
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "initpda": "ts-node src/features/whitelist/initializePda.ts",
     "storeaddress": "ts-node src/features/main/storeMainAddresses.ts",
     "fundaddress": "ts-node src/features/main/fundMainAddresses.ts",
-    "wrapsol": "ts-node src/features/whitelist/wrapSol.ts",
-    "unwrapsol": "ts-node src/features/whitelist/unwrapSol.ts",
     "createmint": "ts-node src/features/token/createMint.ts",
-    "createtoken": "ts-node src/features/token/createTokenAndStopMint.ts"
+    "createtoken": "ts-node src/features/token/createTokenAndStopMint.ts",
+    "createpool": "ts-node src/features/whitelist/createPool.ts",
+    "initpda": "ts-node src/features/whitelist/initializePda.ts",
+    "wrapsol": "ts-node src/features/whitelist/wrapSol.ts",
+    "unwrapsol": "ts-node src/features/whitelist/unwrapSol.ts"
   }
 }
